Sun Jul 01 05:25:34 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c: Another example of why we want compile time
	  typesafety.  The GIOFunc was casted in the watch adding since
	  it had a different prototype, and I was getting somewhat random
	  return values.  Which meant that the chooser would stop working
	  at points completely.  Eeeek!  So change to correct prototype
	  to make the chooser happy.

Sun Jul 01 04:50:39 2001  George Lebl <jirka@5z.com>

	* gui/gdmchooser.c: scan the hosts 3 times in 2 second intervals
	  like xdm chooser (and don't scan already found hosts) also
	  when we get explicit localhost reply get the local hostname
	  so that we get only entry for the local host.

Sun Jul 01 03:53:08 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: actually get the configurator key, allows
	  configuration yet again from the greeter.

Fri Jun 29 19:10:48 2001  George Lebl <jirka@5z.com>

	* daemon/verify-pam.c: Apply patch from Nalin Dahyabhai
	  <nalin@redhat.com> to first zero out the reply array

Fri Jun 29 02:32:01 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: fixes and cleanups to the error display code.

	* daemon/server.c: remove O_APPEND from log file openning since it
	  was being overriden by O_TRUNC anyway.  On crash see if the logfile
	  looks like display being busy.  If it does, tell the user so.  This
	  prevents this case from looking like crashes, and is more
	  informative.  Perhaps we should try starting on the first free
	  display.  That would be good to investigate in the future.

Fri Jun 29 01:22:20 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in:  Apply cleanup patch from drscott@rochester.rr.com
	  (Dean Scott)

Thu Jun 28 18:48:56 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in, gui/gdmconfig.(c|glade), gui/gdmchooser.c:
	  Add two keys Broadcast and Hosts to the chooser configuration
	  to allow more fine grained control as to what appears in the