@@ -1,3 +1,8 @@
+Sun Jul 01 15:08:51 2001  George Lebl <jirka@5z.com>
+
+	* daemon/xdmcp.c, daemon/choose.[ch]: use correct prototypes and stop
+	  casting watch functions
+
 Sun Jul 01 05:25:34 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmchooser.c: Another example of why we want compile time
